# agent-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.en.md  README.md  README_ja.md  install.sh
.aiprj/: AI_PRJ_DESIGN.md  AI_PRJ_REQUIREMENTS.md  AI_PRJ_TASKS.md  README.md  instructions_ja.md
.aiprj/rules/: close_ai.md  exec_job.md  setup_project.md  update_project.md
.claude/commands/: close_ai.md
.github/workflows/: ci.yml
doc/: architecture.md  config.md  personas.md  tools.md  troubleshooting.md  usage.md
doc/providers/: claude.md  codex.md  llamacpp.md  ollama.md  opencode.md
example/agents/: coder.md  planner.md  reviewer.md
scripts/: manual_acceptance.sh
src/: agent.rs  app.rs  cli.rs  commands.rs  config.rs  editor.rs  error.rs  history.rs  id.rs  log.rs  main.rs  persona.rs
src/ai/: claude.rs  codex.rs  llamacpp.rs  mod.rs  ollama.rs  opencode.rs  stream.rs  tool_bridge.rs
src/ipc/: client.rs  mod.rs  registry.rs  server.rs
src/tools/: fs_read.rs  fs_write.rs  mod.rs  send_to.rs  shell.rs
