[package]
name = "agent-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Standalone multi-agent CLI with Claude Code-equivalent functionality"
readme = "README.md"
repository = "https://github.com/aquaxis/agent-cli"

[[bin]]
name = "agent-cli"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# HTTP / streaming
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"

# Time / IDs
chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal
crossterm = "0.27"

# Path / dirs
dirs = "5"
shellexpand = "3"
tempfile = "3"
unicode-width = "0.2.2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util", "macros"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
